# local-memory-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOP.md  LICENSE  README.md  Start_session.md  install.sh
.github/workflows/: ci.yml  release.yml
agents/: ADR.md  LESSONS_LEARNED.md  PERSONA_IMPROVEMENTS.md  TIME_LOG.md  TODO.md  WORKFLOW.md  arch_review.md  interop_review.md  maint_review.md  rel_review.md  sec_review.md
design/: DESIGN.md  agentcore-parity.md  ci-cd.md  core-db-layer.md  event-tools.md  graceful-shutdown.md  installers.md  integration-tests.md  knowledge-graph.md  llm-discoverability.md  mcp-server.md  memory-tools.md  metadata-as-value.md  namespace-tools.md  search.md  session-tools.md
src/: db.rs  error.rs  events.rs  graph.rs  lib.rs  main.rs  memories.rs  namespaces.rs  search.rs  sessions.rs  store.rs  tools.rs
tests/: e2e.rs  integration.rs
tests/common/: mod.rs
