[package]
name = "local-memory-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "=1.5.0", features = ["transport-io", "server"] }
rusqlite = { version = "=0.35.0", features = ["bundled", "vtab"] }
sqlite-vec = "=0.1.7-alpha.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
thiserror = "2"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
schemars = "1"
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["process", "io-util"] }
